--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
 
+@font-face {
+    @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+}
+
 :root {
     --cor0: #274D12;
     --cor1: #41801D;;
@@ -10,6 +14,38 @@
     --cor6: #CC1B1F;
 
     --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
-    --fonte-titulo-principal: ;
+    --fonte-titulo-principal: 'Kaushan Script', cursive; 
     --fonte-destaque: ;
+}
+
+* {
+    font-family: var(--fonte-padrao);
+    margin: 0px;
+    padding: 0px;
+}
+
+body {
+    width: 100vw;
+    height: 100vh;
+    background: black url(../imagens/backgroung-p.jpg) no-repeat;
+    background-size: cover;
+}
+
+h1 {
+    font-family: var(--fonte-titulo-principal);
+    font-size: 5em;
+    text-align: center;
+    color: var(--cor3);
+    padding: 20px;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.562);
+}
+
+main {
+    background-color: rgba(255, 255, 255, 0.541);
+    width: 50vw;
+    margin: auto;
+    border-radius: 10px;
+    padding: 10px;
+    text-indent: 30px;
+    text-align: justify;
 }
