--- a/estilos/style.css
+++ b/estilos/style.css
@@ -24,11 +24,16 @@
     padding: 0px;
 }
 
+header {
+    
+}
+
 body {
     width: 100vw;
     height: 100vh;
-    background: black url(../imagens/backgroung-p.jpg) no-repeat;
+    background: black url(../imagens/background-peq.jpg) no-repeat;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 h1 {
