Iniciei o estilo do menu

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,6 +28,22 @@ header {
     
 }
 
+menu {
+    
+}
+
+menu a {
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: var(--cor1);
+    color: white;
+}
+
+menu a:hover {
+    background-color: var(--cor0);
+}
+
 body {
     width: 100vw;
     height: 100vh;
