--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,6 +42,7 @@ menu a {
 
 menu a:hover {
     background-color: #274d12ab;
+    transition: 1s;
 }
 
 body {
@@ -65,6 +66,7 @@ main {
     background-color: rgba(255, 255, 255, 0.541);
     width: 50vw;
     margin: auto;
+    margin-top: 40px;
     border-radius: 10px;
     padding: 10px;
     text-indent: 30px;
