--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,8 +28,22 @@ header {
     
 }
 
+i#burguer {
+    display: block;
+    background-color: #274d12c9;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+i#burguer:hover {
+    background-color: #8fcc6cb2;
+    color: black;
+}
+
 menu {
-    
+    display: none;
 }
 
 menu a {
