--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,6 +35,7 @@ i#burguer {
     text-align: center;
     padding: 10px;
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 i#burguer:hover {
@@ -78,7 +79,7 @@ h1 {
 
 main {
     background-color: rgba(255, 255, 255, 0.541);
-    width: 50vw;
+    width: 80vw;
     margin: auto;
     margin-top: 40px;
     border-radius: 10px;
