--- a/estilos/style.css
+++ b/estilos/style.css
@@ -82,7 +82,7 @@ h1 {
 }
 
 main {
-    background-color: rgba(255, 255, 255, 0.541);
+    background-color: rgba(255, 255, 255, 0.507);
     width: 80vw;
     margin: auto;
     margin-top: 40px;
@@ -90,4 +90,18 @@ main {
     padding: 10px;
     text-indent: 30px;
     text-align: justify;
+}
+
+main > section > h2 {
+    color: var(--cor0);
+    text-shadow: 2px 2px 2px #8FCC6C;
+    ;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+main > section > p {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin-bottom: 15px;
 }
