--- a/estilos/paginas.css
+++ b/estilos/paginas.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');    
 
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 
 :root {
@@ -25,16 +26,23 @@
     padding: 0px;
 }
 
-
 body {
    
     height: 100vh;
-    background: black url(../imagens/background-peq.jpg) center center no-repeat fixed;
+    background: black url(../imagens/background2-p.jpg) center center no-repeat fixed;
     background-size: cover;
 }
 
 header {
     
+}
+
+header > h1 {
+    font-family: var(--fonte-titulo-principal);
+    font-size: 3em;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 2px var(--cor0);
 }
 
 i#burguer {
@@ -74,16 +82,6 @@ menu > ul > li > a:hover {
     transition: 1s;
 }
 
-h1 {
-    font-family: 'var(--fonte-titulo-principal)';
-    font-size: 5em;
-    font-weight: normal;
-    text-align: center;
-    color: var(--cor3);
-    padding: 20px;
-    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.562);
-}
-
 main {
     background-color: rgba(255, 255, 255, 0.507);
     width: 80vw;
@@ -93,18 +91,4 @@ main {
     padding: 10px;
     text-indent: 30px;
     text-align: justify;
-}
-
-main > section > h2 {
-    color: var(--cor0);
-    text-shadow: 2px 2px 2px #8FCC6C;
-    ;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-main > section > p {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin-bottom: 15px;
 }
