--- a/estilos/style.css
+++ b/estilos/style.css
@@ -75,7 +75,7 @@ menu > ul > li > a:hover {
 }
 
 h1 {
-    font-family: 'var(--fonte-titulo-principal)';
+    font-family: var(--fonte-titulo-principal);
     font-size: 5em;
     font-weight: normal;
     text-align: center;
@@ -96,6 +96,8 @@ main {
 }
 
 main > section > h2 {
+    font-family: var(--fonte-destaque);
+    font-size: 2em;
     color: var(--cor0);
     text-shadow: 2px 2px 2px #8FCC6C;
     ;
