--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,7 @@
 body {
    
     height: 100vh;
-    background: black url(../imagens/background-peq.jpg) center center no-repeat fixed;
+    background: black url(../imagens/background-home.jpg) center center no-repeat fixed;
     background-size: cover;
 }
 
