--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,12 +63,20 @@ img {
 }
 
 i#burguer {
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
     background-color: #274d12c9;
     color: white;
     text-align: center;
     padding: 10px;
     cursor: pointer;
+}
+
+span {
+    font-size: 16px;
+    font-weight: bold;
 }
 
 i#burguer:hover {
@@ -98,7 +106,6 @@ menu > ul > li > a:hover {
     background-color: #274d12ab;
     transition: 1s;
 }
-
 
 
 main {
